--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "dependencies": {
     "expo": "^27.0.1",
+    "moment": "^2.22.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-navigation": "^1.5.11",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-storage": "^4.1.2",
+    "redux-storage-engine-reactnativeasyncstorage": "^1.0.5"
   }
 }
